Fix usage of deprecated Double constructor.